{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 105,
  "lineage": "6436f957-d10e-c938-80f5-39afe31bc597",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx-move",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e322da50e0e90e21",
            "arn": "arn:aws:ec2:us-east-1:981254331619:instance/i-061a836ffee23f7bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-061a836ffee23f7bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e669bdfde74a1a76",
            "private_dns": "ip-10-0-0-174.ec2.internal",
            "private_ip": "10.0.0.174",
            "public_dns": "ec2-54-158-212-77.compute-1.amazonaws.com",
            "public_ip": "54.158.212.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ad1b5bd5a599f684",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad27a5bcd9aa860a",
            "tags": {
              "Env": "Dev",
              "Name": "first_ec2",
              "Owner": "Dijah"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "first_ec2",
              "Owner": "Dijah"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-056289ef7a7759acc"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e322da50e0e90e21",
            "arn": "arn:aws:ec2:us-east-1:981254331619:instance/i-0a760fae4781cefec",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a760fae4781cefec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09b9f8c0273367d7a",
            "private_dns": "ip-10-0-1-192.ec2.internal",
            "private_ip": "10.0.1.192",
            "public_dns": "ec2-3-239-253-76.compute-1.amazonaws.com",
            "public_ip": "3.239.253.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05660a7dd0611aafc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-091ade0df9d9fe229",
            "tags": {
              "Env": "Dev",
              "Name": "second_ec2",
              "Owner": "Dijah"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "second_ec2",
              "Owner": "Dijah"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-056289ef7a7759acc"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981254331619:internet-gateway/igw-0c83ddfff7f7e609c",
            "id": "igw-0c83ddfff7f7e609c",
            "owner_id": "981254331619",
            "tags": {
              "created_with": "terraform",
              "creator": "dijah",
              "env": "dev",
              "team": "infrastructure"
            },
            "tags_all": {
              "created_with": "terraform",
              "creator": "dijah",
              "env": "dev",
              "team": "infrastructure"
            },
            "vpc_id": "vpc-01508a5d8f486d47a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:981254331619:loadbalancer/app/nginx-lb/2ae1a25e0edf1fc5",
            "arn_suffix": "app/nginx-lb/2ae1a25e0edf1fc5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-lb-1599997046.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:981254331619:loadbalancer/app/nginx-lb/2ae1a25e0edf1fc5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-lb",
            "security_groups": [
              "sg-056289ef7a7759acc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-091ade0df9d9fe229"
              },
              {
                "subnet_id": "subnet-0ad27a5bcd9aa860a"
              }
            ],
            "subnets": [
              "subnet-091ade0df9d9fe229",
              "subnet-0ad27a5bcd9aa860a"
            ],
            "tags": {
              "created_with": "terraform",
              "creator": "dijah",
              "env": "dev",
              "team": "infrastructure"
            },
            "tags_all": {
              "created_with": "terraform",
              "creator": "dijah",
              "env": "dev",
              "team": "infrastructure"
            },
            "vpc_id": "vpc-01508a5d8f486d47a",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:981254331619:listener/app/nginx-lb/2ae1a25e0edf1fc5/55428bf79482c499",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:981254331619:targetgroup/nginx-alb-tg/8d255100cd66c6a5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:981254331619:listener/app/nginx-lb/2ae1a25e0edf1fc5/55428bf79482c499",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:981254331619:loadbalancer/app/nginx-lb/2ae1a25e0edf1fc5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb1",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:981254331619:targetgroup/nginx-alb-tg/8d255100cd66c6a5",
            "arn_suffix": "targetgroup/nginx-alb-tg/8d255100cd66c6a5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:981254331619:targetgroup/nginx-alb-tg/8d255100cd66c6a5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01508a5d8f486d47a"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:981254331619:targetgroup/nginx-alb-tg/8d255100cd66c6a5-20220305232849733100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:981254331619:targetgroup/nginx-alb-tg/8d255100cd66c6a5",
            "target_id": "i-061a836ffee23f7bd"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:981254331619:targetgroup/nginx-alb-tg/8d255100cd66c6a5-20220305232849590600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:981254331619:targetgroup/nginx-alb-tg/8d255100cd66c6a5",
            "target_id": "i-0a760fae4781cefec"
          },
          "dependencies": [
            "aws_instance.nginx2",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981254331619:route-table/rtb-0cbecf19d18f979c9",
            "id": "rtb-0cbecf19d18f979c9",
            "owner_id": "981254331619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c83ddfff7f7e609c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "created_with": "terraform",
              "creator": "dijah",
              "env": "dev",
              "team": "infrastructure"
            },
            "tags_all": {
              "created_with": "terraform",
              "creator": "dijah",
              "env": "dev",
              "team": "infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-01508a5d8f486d47a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06180bffed73c8c5c",
            "route_table_id": "rtb-0cbecf19d18f979c9",
            "subnet_id": "subnet-0ad27a5bcd9aa860a"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071fb6460d7f58b82",
            "route_table_id": "rtb-0cbecf19d18f979c9",
            "subnet_id": "subnet-091ade0df9d9fe229"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981254331619:security-group/sg-056289ef7a7759acc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056289ef7a7759acc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "981254331619",
            "revoke_rules_on_delete": false,
            "tags": {
              "created_with": "terraform",
              "creator": "dijah",
              "env": "dev",
              "team": "infrastructure"
            },
            "tags_all": {
              "created_with": "terraform",
              "creator": "dijah",
              "env": "dev",
              "team": "infrastructure"
            },
            "timeouts": null,
            "vpc_id": "vpc-01508a5d8f486d47a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981254331619:subnet/subnet-0ad27a5bcd9aa860a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad27a5bcd9aa860a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "981254331619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "created_with": "terraform",
              "creator": "dijah",
              "env": "dev",
              "team": "infrastructure"
            },
            "tags_all": {
              "created_with": "terraform",
              "creator": "dijah",
              "env": "dev",
              "team": "infrastructure"
            },
            "vpc_id": "vpc-01508a5d8f486d47a"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981254331619:subnet/subnet-091ade0df9d9fe229",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091ade0df9d9fe229",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "981254331619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "created_with": "terraform",
              "creator": "dijah",
              "env": "dev",
              "team": "infrastructure"
            },
            "tags_all": {
              "created_with": "terraform",
              "creator": "dijah",
              "env": "dev",
              "team": "infrastructure"
            },
            "vpc_id": "vpc-01508a5d8f486d47a"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:981254331619:vpc/vpc-01508a5d8f486d47a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00076dffd44a8e5d8",
            "default_route_table_id": "rtb-0f9ebb86ea73c920e",
            "default_security_group_id": "sg-0e50dfaf15e5aeae6",
            "dhcp_options_id": "dopt-0d4d08c66811a5bcb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01508a5d8f486d47a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f9ebb86ea73c920e",
            "owner_id": "981254331619"
          }
        }
      ]
    }
  ]
}